@@ -7,6 +7,7 @@ version 1.36:
 	- all: use LDLIBS instead of adding libraries to LDFLAGS.
 	- pommed: fix keyboard backlight fading on pmac.
 	- pommed: lock/unlock auto kbd backlight using up/down keys.
+	- pommed: add ADB product IDs for ANSI and JIS keyboard variants.
 
 version 1.35:
 	- pommed: fix crash if no fnmode sysfs node found.
